--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <div class="container-fluid">
         <!-- 1) Logo flush left -->
         <a class="navbar-brand me-auto" href="#">
-            <img src="./public/img/logo.svg" alt="Logo">
+            <img src="public/icons/logo.svg" alt="Logo">
         </a>
 
         <!-- toggler stays -->
@@ -36,7 +36,7 @@
         <!-- 3) Phone flush right -->
         <div class="d-flex align-items-center ms-auto">
             <a class="btn" href="tel:+486506468569">
-                <img src="./public/img/contact-phone.svg" alt="" class="me-1">+48 650 468 569
+                <img src="public/icons/contact-phone.svg" alt="" class="me-1">+48 650 468 569
             </a>
         </div>
     </div>
@@ -75,21 +75,21 @@
     <div class="container">
         <div class="row text-center gy-5">
             <div class="col-sm-3">
-                <img src="./public/img/icon-perfekcyjny-obraz.svg" alt="" class="mb-3">
+                <img src="public/icons/icon-perfekcyjny-obraz.svg" alt="" class="mb-3">
                 <h5 class="fw-semibold mb-4">Perfekcyjny obraz</h5>
                 <p class="text-secondary">
                     Inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur a.
                 </p>
             </div>
             <div class="col-sm-3 offset-lg-1">
-                <img src="./public/img/icon-wydajna-praca.svg" alt="" class="mb-3">
+                <img src="public/icons/icon-wydajna-praca.svg" alt="" class="mb-3">
                 <h5 class="fw-semibold mb-4">Wydajna praca</h5>
                 <p class="text-secondary">
                     Inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur a.
                 </p>
             </div>
             <div class="col-sm-3 offset-lg-1">
-                <img src="./public/img/icon-wygoda-uzytkownika.svg" alt="" class="mb-3">
+                <img src="public/icons/icon-wygoda-uzytkownika.svg" alt="" class="mb-3">
                 <h5 class="fw-semibold mb-4">Wygoda użytkownika</h5>
                 <p class="text-secondary">
                     Inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur a.
@@ -119,64 +119,132 @@
 </section>
 
 <!-- 7) Dual Info Blocks -->
-<section class="py-5">
+<section class="py-5 dual-blocks">
     <div class="container">
-        <div class="row align-items-center gy-4">
-            <!-- Block 1 -->
+
+        <!-- Block 1: Image left, text right -->
+        <div class="row align-items-start gy-4">
             <div class="col-md-6">
-                <img src="./public/img/doctors-monitor.png" alt="Doktorzy" class="img-fluid rounded-3">
+                <img
+                        src="./public/img/doctors-monitor.png"
+                        alt="Lekarze przy monitorze"
+                        class="img-fluid rounded-3"
+                >
             </div>
-            <div class="col-md-6">
-                <h5>inventore veritatis et quasi architecto beatae vitae</h5>
-                <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit …</p>
+            <div class="col-md-6 d-flex flex-column justify-content-start ps-lg-5">
+                <p class="dual-label text-secondary mb-2">
+                    inventore veritatis et quasi architecto
+                </p>
+                <h4 class="dual-title fw-bold mb-3">
+                    inventore veritatis et quasi<br>architecto beatae vitae
+                </h4>
+                <p class="dual-text text-secondary">
+                    inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut od
+                </p>
             </div>
         </div>
-        <div class="row align-items-center gy-4 mt-5 flex-md-row-reverse">
-            <!-- Block 2 -->
+
+        <!-- Block 2: Image right, text left -->
+        <div class="row align-items-start gy-4 flex-md-row-reverse mt-5">
             <div class="col-md-6">
-                <img src="./public/img/tabletop-monitor.png" alt="Stół zabiegowy" class="img-fluid rounded-3">
+                <img
+                        src="./public/img/tabletop-monitor.png"
+                        alt="Monitor na stole zabiegowym"
+                        class="img-fluid rounded-3"
+                >
             </div>
-            <div class="col-md-6">
-                <h5>inventore veritatis et quasi architecto beatae vitae dicta</h5>
-                <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit …</p>
+            <div class="col-md-6 d-flex flex-column justify-content-start">
+                <p class="dual-label text-secondary mb-2">
+                    inventore veritatis et quasi architecto
+                </p>
+                <h4 class="dual-title fw-bold mb-3">
+                    inventore veritatis et quasi<br>architecto beatae vitae dicta
+                </h4>
+                <p class="dual-text text-secondary">
+                    inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut od
+                </p>
+            </div>
+        </div>
+
+    </div>
+</section>
+
+<!-- 8) References Grid -->
+<section id="referencje" class="references-section py-5">
+    <div class="container">
+        <h2 class="fw-bold mb-4">Referencje</h2>
+
+        <!-- 4-card grid -->
+        <div class="row row-cols-1 row-cols-md-2 g-4">
+            <!-- Card 1 -->
+            <div class="col">
+                <article class="ref-card d-flex rounded-3 shadow-sm">
+                    <figure class="ref-card__media flex-shrink-0">
+                        <img src="./public/img/referencje.png" alt="Referencja 1" class="img-fluid">
+                        <button class="ref-card__btn btn btn-light">
+                            <img src="./public/icons/download.svg" alt="" class="me-1">Pobierz
+                        </button>
+                    </figure>
+                    <p class="ref-card__text mb-0 d-flex align-items-center">
+                        inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia
+                    </p>
+                </article>
+            </div>
+            <div class="col">
+                <article class="ref-card d-flex rounded-3 shadow-sm">
+                    <figure class="ref-card__media flex-shrink-0">
+                        <img src="./public/img/referencje.png" alt="Referencja 1" class="img-fluid">
+                        <button class="ref-card__btn btn btn-light">
+                            <img src="./public/icons/download.svg" alt="" class="me-1">Pobierz
+                        </button>
+                    </figure>
+                    <p class="ref-card__text mb-0 d-flex align-items-center">
+                        inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia
+                    </p>
+                </article>
+            </div>
+            <div class="col">
+                <article class="ref-card d-flex rounded-3 shadow-sm">
+                    <figure class="ref-card__media flex-shrink-0">
+                        <img src="./public/img/referencje.png" alt="Referencja 1" class="img-fluid">
+                        <button class="ref-card__btn btn btn-light">
+                            <img src="./public/icons/download.svg" alt="" class="me-1">Pobierz
+                        </button>
+                    </figure>
+                    <p class="ref-card__text mb-0 d-flex align-items-center">
+                        inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia
+                    </p>
+                </article>
+            </div>
+            <div class="col">
+                <article class="ref-card d-flex rounded-3 shadow-sm">
+                    <figure class="ref-card__media flex-shrink-0">
+                        <img src="./public/img/referencje.png" alt="Referencja 1" class="img-fluid">
+                        <button class="ref-card__btn btn btn-light">
+                            <img src="./public/icons/download.svg" alt="" class="me-1">Pobierz
+                        </button>
+                    </figure>
+                    <p class="ref-card__text mb-0 d-flex align-items-center">
+                        inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia
+                    </p>
+                </article>
             </div>
         </div>
     </div>
 </section>
 
-<!-- 8) References Grid -->
-<section class="py-5 bg-light">
-    <div class="container">
-        <h2 class="h4 fw-semibold mb-4">Referencje</h2>
-        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
-            <!-- Repeat for each ref -->
-            <div class="col">
-                <div class="card h-100 shadow-sm border-0">
-                    <img src="public/img/ref-thumb-1.jpg" class="card-img-top" alt="Referencja 1">
-                    <div class="card-body">
-                        <p class="card-text text-secondary">inventore veritatis et quasi architecto beatae vitae dicta …</p>
-                    </div>
-                    <div class="card-footer bg-white border-0 text-center">
-                        <a href="#" class="btn btn-outline-secondary btn-sm">
-                            <img src="public/img/pdf-icon.svg" alt="" class="me-1">Pobierz
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <!-- … -->
-        </div>
-    </div>
-</section>
+
+
 
 <!-- 9) Footer -->
 <footer class="bg-dark text-light py-4">
     <div class="container">
         <div class="row">
             <div class="col-md-4">
-                <a href="#"><img src="./public/img/logo.svg" alt="Logo" class="mb-3"></a>
+                <a href="#"><img src="public/icons/logo.svg" alt="Logo" class="mb-3"></a>
                 <ul class="list-unstyled">
-                    <li><img src="./public/img/contact-phone.svg" alt="" class="me-2">+48 650 468 569</li>
-                    <li><img src="./public/img/contact-phone.svg" alt="" class="me-2">+48 502 342 560</li>
+                    <li><img src="public/icons/contact-phone.svg" alt="" class="me-2">+48 650 468 569</li>
+                    <li><img src="public/icons/contact-phone.svg" alt="" class="me-2">+48 502 342 560</li>
                     <li><img src="public/img/contact-email-red.svg" alt="" class="me-2">biuro@iqrad.pl</li>
                 </ul>
             </div>
