Styles structure updates

--- a/about.html
+++ b/about.html
@@ -11,11 +11,11 @@
 <body>
 
 <!-- 1) Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom">
+<nav class="navbar navbar-expand-lg navbar-light border-bottom">
     <div class="container-fluid">
         <!-- 1) Logo flush left -->
         <a class="navbar-brand me-auto" href="#">
-            <img src="public/icons/logo.svg" alt="Logo">
+            <img src="./public/icons/logo.svg" alt="Logo">
         </a>
 
         <!-- toggler stays -->
@@ -38,7 +38,7 @@
         <!-- 3) Phone flush right -->
         <div class="d-flex align-items-center ms-auto">
             <a class="btn" href="tel:+486506468569">
-                <img src="public/icons/contact-phone.svg" alt="" class="me-1">+48 650 468 569
+                <img src="./public/icons/contact-phone.svg" alt="" class="me-1">+48 650 468 569
             </a>
         </div>
     </div>
@@ -77,21 +77,21 @@
     <div class="container">
         <div class="row text-center gy-5">
             <div class="col-sm-3">
-                <img src="public/icons/icon-perfekcyjny-obraz.svg" alt="" class="mb-3">
+                <img src="./public/icons/icon-perfekcyjny-obraz.svg" alt="" class="mb-3">
                 <h5 class="fw-semibold mb-4">Perfekcyjny obraz</h5>
                 <p class="text-secondary">
                     Inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur a.
                 </p>
             </div>
             <div class="col-sm-3 offset-lg-1">
-                <img src="public/icons/icon-wydajna-praca.svg" alt="" class="mb-3">
+                <img src="./public/icons/icon-wydajna-praca.svg" alt="" class="mb-3">
                 <h5 class="fw-semibold mb-4">Wydajna praca</h5>
                 <p class="text-secondary">
                     Inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur a.
                 </p>
             </div>
             <div class="col-sm-3 offset-lg-1">
-                <img src="public/icons/icon-wygoda-uzytkownika.svg" alt="" class="mb-3">
+                <img src="./public/icons/icon-wygoda-uzytkownika.svg" alt="" class="mb-3">
                 <h5 class="fw-semibold mb-4">Wygoda użytkownika</h5>
                 <p class="text-secondary">
                     Inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur a.
