Styles structure updates

--- a/about.html
+++ b/about.html
@@ -37,8 +37,12 @@
 
         <!-- 3) Phone flush right -->
         <div class="d-flex align-items-center ms-auto">
-            <a class="btn" href="tel:+486506468569">
-                <img src="./public/icons/contact-phone.svg" alt="" class="me-1">+48 650 468 569
+            <a
+                    class="btn d-inline-flex align-items-center flex-nowrap"
+                    href="tel:+486506468569"
+            >
+                <img src="./public/icons/contact-phone.svg" alt="" class="me-1">
+                +48 650 468 569
             </a>
         </div>
     </div>
@@ -56,9 +60,9 @@
 <!-- 3) Intro Text -->
 <section class="py-5 intro-section">
     <div class="container">
-        <h2 class="h3 fw-bold mb-5">Dlaczego wyświetlacz<br>medyczny LG</h2>
+        <h2 class="h1 fw-bold mb-5 mt-3">Dlaczego wyświetlacz<br>medyczny LG</h2>
         <div class="row">
-            <div class="col-lg-5 offset-lg-5">
+            <div class="col-lg-7 offset-lg-10">
                 <h5 class="fw-semibold mb-3">Przenieś swój<br>wyświetlacz medyczny</h5>
                 <p>
                     LG Electronics, a leader of the premium monitor market, support you to be more confident with diagnosis and operations.
@@ -77,21 +81,21 @@
     <div class="container">
         <div class="row text-center gy-5">
             <div class="col-sm-3">
-                <img src="./public/icons/icon-perfekcyjny-obraz.svg" alt="" class="mb-3">
+                <img src="./public/icons/icon-perfekcyjny-obraz.svg" alt="" class="mb-3 offset-lg-5">
                 <h5 class="fw-semibold mb-4">Perfekcyjny obraz</h5>
                 <p class="text-secondary">
                     Inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur a.
                 </p>
             </div>
             <div class="col-sm-3 offset-lg-1">
-                <img src="./public/icons/icon-wydajna-praca.svg" alt="" class="mb-3">
+                <img src="./public/icons/icon-wydajna-praca.svg" alt="" class="mb-3 offset-lg-5">
                 <h5 class="fw-semibold mb-4">Wydajna praca</h5>
                 <p class="text-secondary">
                     Inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur a.
                 </p>
             </div>
             <div class="col-sm-3 offset-lg-1">
-                <img src="./public/icons/icon-wygoda-uzytkownika.svg" alt="" class="mb-3">
+                <img src="./public/icons/icon-wygoda-uzytkownika.svg" alt="" class="mb-3 offset-lg-5">
                 <h5 class="fw-semibold mb-4">Wygoda użytkownika</h5>
                 <p class="text-secondary">
                     Inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur a.
