--- a/about.html
+++ b/about.html
@@ -241,55 +241,46 @@
 
 
 <!-- 9) Footer -->
-<footer class="site-footer py-5">
+<footer class="site-footer">
     <div class="container">
-        <div class="row g-4">
-            <!-- 1) Contact -->
-            <div class="col-12 col-md-3">
-                <ul class="footer-contact list-unstyled mb-0">
-                    <li>
-                        <span class="icon-wrap"><img src="./public/icons/contact-phone-red.svg" alt=""></span>
-                        <a href="tel:+48660648569">+48 660 468 569</a>
-                    </li>
-                    <li>
-                        <span class="icon-wrap"><img src="./public/icons/contact-phone-red.svg" alt=""></span>
-                        <a href="tel:+48502342560">+48 502 342 560</a>
-                    </li>
-                    <li>
-                        <span class="icon-wrap"><img src="./public/icons/contact-email-red.svg" alt=""></span>
-                        <a href="mailto:biuro@iqrad.pl">biuro@iqrad.pl</a>
-                    </li>
-                </ul>
-            </div>
+        <div class="footer-row">
+            <!-- Contact column -->
+            <ul class="footer-contact">
+                <li>&nbsp;</li>
+                <li>
+                    <img src="./public/icons/contact-phone-red.svg" alt="">
+                    <a href="tel:+48660468569">+48 660 468 569</a>
+                </li>
+                <li>
+                    <img src="./public/icons/contact-phone-red.svg" alt="">
+                    <a href="tel:+48502342560">+48 502 342 560</a>
+                </li>
+                <li>
+                    <img src="./public/icons/contact-email-red.svg" alt="">
+                    <a href="mailto:biuro@iqrad.pl">biuro@iqrad.pl</a>
+                </li>
+            </ul>
 
-            <!-- 2) Menu -->
-            <div class="col-6 col-md-3 col-lg-2">
-                <ul class="footer-nav list-unstyled mb-0">
-                    <li><a href="#">Referencje</a></li>
-                    <li><a href="#">Serwis</a></li>
-                    <li><a href="#">Katalogi</a></li>
-                    <li><a href="#">Kontakt</a></li>
-                </ul>
-            </div>
+            <!-- Navigation columns -->
+            <ul class="footer-nav nav-col">
+                <li><a href="#">Referencje</a></li>
+                <li><a href="#">Serwis</a></li>
+                <li><a href="#">Katalogi</a></li>
+                <li><a href="#">Kontakt</a></li>
+            </ul>
 
-            <!-- 3) Products -->
-            <div class="col-6 col-md-3 col-lg-3">
-                <ul class="footer-nav list-unstyled mb-0">
-                    <li><a href="#">Monitory chirurgiczne</a></li>
-                    <li><a href="#">Detektory</a></li>
-                    <li class="fw-bold mt-2">Baza wiedzy</li>
-                    <li><a href="#">Monitory medyczne</a></li>
-                    <li><a href="#">Detektory</a></li>
-                </ul>
-            </div>
-
-            <!-- 4) Legal -->
-            <div class="col-12 col-md-3 col-lg-2 ms-lg-auto">
-                <ul class="footer-nav list-unstyled mb-0">
-                    <li><a href="#">Polityka prywatności</a></li>
-                    <li><a href="#">RODO</a></li>
-                </ul>
-            </div>
+            <ul class="footer-nav nav-col">
+                <li><a href="#">Monitory chirurgiczne</a></li>
+                <li><a href="#">Detektory</a></li>
+                <li>&nbsp;</li>
+                <li class="fw-bold"><a href="#">Baza wiedzy</a></li>
+                <li><a href="#">Monitory medyczne</a></li>
+                <li><a href="#">Detektory</a></li>
+            </ul>
+            <ul class="footer-nav nav-col">
+                <li><a href="#">Polityka prywatności</a></li>
+                <li><a href="#">Rodo</a></li>
+            </ul>
         </div>
     </div>
 </footer>
